# finance-app

./: README.md  docker-compose.yaml
.github/workflows/: api.yaml  main.yaml  web.yaml
api/: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yaml  sqlx-data.json
api/migrations/: 20230118205107_init.down.sql  20230118205107_init.up.sql
api/src/: config.rs  log.rs  main.rs
api/src/application/: mod.rs
api/src/application/services/: accounts.rs  mail.rs  mod.rs  otp.rs  tokens.rs  users.rs
api/src/application/use_cases/: auth.rs  profile.rs
api/src/domain/: error.rs  mod.rs
api/src/domain/entities/: accounts.rs  auth.rs  mod.rs  users.rs
api/src/infrastructure/: mod.rs
api/src/infrastructure/paseto/: error.rs  mod.rs
api/src/infrastructure/pg/: accounts.rs  error.rs  mod.rs  users.rs
api/src/infrastructure/redis/: error.rs  mod.rs
api/src/infrastructure/smtp/: error.rs  mod.rs
api/src/infrastructure/web/: error.rs  middleware.rs  mod.rs
api/src/infrastructure/web/routes/: auth.rs  mod.rs  profile.rs
web/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.css  app.d.ts
web/src/lib/components/: Error.svelte  NewAccount.svelte  NewMovement.svelte
web/src/lib/components/atoms/: Button.svelte  Icon.svelte  Input.svelte
web/src/lib/components/auth/: Auth.svelte  AuthProvider.svelte
web/src/lib/components/nav/: AccountsList.svelte  (+2 more)
web/src/lib/services/: stores.ts  utils.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
(+6 files in other folders)
