[package]
name = "finance_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
axum = { version = "0.6.2", features = ["macros", "headers"] }
bb8-redis = "0.12.0"
chrono = {version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
ed25519 = { version = "2.0.0", features = ["pkcs8", "pem"] }
envy = "0.4"
lettre = { version = "0.10.1", features = ["smtp-transport", "builder", "pool", "hostname", "tokio1-rustls-tls"], default-features = false }
once_cell = "1.17.0"
pasetors = { version = "0.6.5", features = ["v2"] }
rand = "0.8.5"
rust_decimal = "1.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "offline", "migrate", "uuid", "decimal", "runtime-tokio-rustls", "chrono"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
hyper = "0.14.25"
mockall = "0.11.3"


